
For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

 - Removed ``psql.enabled`` and ``psql.port`` settings from ``sys.cluster``
   because they where wrongly exposed in this table.

 - Fixed `copy from` to be able to copy data into a partitioned table with a 
   generated column as both the primary key and the partitioned column.

 - NullPointerException thrown when selecting ``routing_hash_function``
   or ``version`` columns from sys.shards for blob tables.

 - Fixed an issue which caused failing `sys.snapshot` queries if the
   `data.path` of an existing fs repository was not configured anymore

 - Fixed error thrown when applying filtering, ordering or limit on
   joins with more than 2 tables.

 - Use the region of the EC2 instance for EC2 discovery when neither
   ``cloud.aws.ec2.endpoint`` nor ``cloud.aws.region`` are specified or do not
   resolve in a valid service endpoint.

 - Use crate favicon instead of elasticsearch.

 - Fixed issue which lead to an object's column policy being changed to
   the default DYNAMIC when adding a nested object column using the
   `alter table` statement.

 - Fix: `sys.snapshot` queries hung instead of throwing an error if something
   went wrong.

 - Fixed an issue with `regexp_replace`: In some cases it used the third
   argument as flags parameter instead of the fourth argument.

 - Fixed an issue which lead to brief unavailability of already registered
   functions after a function was created or dropped in the same schema.

 - Improved error message when trying to update an element of an array.

 - Fixed a regression that lead to `ArrayIndexOutOfBoundsException` if a JOIN