@@ -581,6 +581,14 @@ public class SelectStatementAnalyzerTest extends CrateDummyClusterServiceUnitTes
     }
 
     @Test
+    public void testSelectDistinctWrongOrderBy() {
+        expectedException.expect(UnsupportedOperationException.class);
+        expectedException.expectMessage("ORDER BY expression 'add(id, 10)' must appear in the " +
+                                        "select clause when SELECT DISTINCT is used");
+        analyze("select distinct id from users order by id + 10");
+    }
+
+    @Test
     public void testSelectGlobalDistinctAggregate() {
         SelectAnalyzedStatement distinctAnalysis = analyze("select distinct count(*) from users");
         assertThat(distinctAnalysis.relation().querySpec().groupBy().isPresent(), is(false));
